# XMLCoqDedukti

./: .gitignore  Makefile  README.md  TODO  xmlcoqdk  xmlcoqdk.opam
src/: cic.ml  cicParser.ml  cicParser.mli  cicToDedukti.ml  cicToDedukti.mli  cicUniv.ml  cicUniv.ml4  cicUniv.mli  deannotate.ml  debug.ml  dkprint.ml  dune  hExtlib.ml  hExtlib.mli  log.ml  main.ml  unshare.ml  uriManager.ml  uriManager.mli  xml.ml  xml.ml4  xmlPushParser.ml
test/: Makefile
test/Coq/Init/: Datatypes.theory.xml  Decimal.theory.xml  Logic.theory.xml  Logic_Type.theory.xml  Nat.theory.xml  Notations.glob  Notations.theory.xml  Peano.theory.xml  Prelude.theory.xml  Specif.theory.xml  Tactics.theory.xml  Tauto.theory.xml  Wf.theory.xml
test/Coq/Init/Datatypes/: CompSpec2Type.con.constraints.xml  CompSpecT.con.constraints.xml  app.con.constraints.xml  fst.con.constraints.xml  injective_projections.con.constraints.xml  is_true.con.constraints.xml  length.con.constraints.xml  option_map.con.constraints.xml  prod_curry.con.constraints.xml  prod_uncurry.con.constraints.xml  surjective_pairing.con.constraints.xml
test/Coq/Init/Logic/: eq_ex.con.constraints.xml  eq_ex2.con.constraints.xml  eq_ex2_hprop.con.constraints.xml  eq_ex2_uncurried.con.constraints.xml  eq_ex_hprop.con.constraints.xml  eq_ex_uncurried.con.constraints.xml  eq_id_comm_l.con.constraints.xml  eq_id_comm_r.con.constraints.xml  eq_ind_r.con.constraints.xml  eq_rec_r.con.constraints.xml  eq_rect_r.con.constraints.xml  eq_refl_map_distr.con.constraints.xml  (+30 more)
test/Dedukti/: Coq.dk  Coq_Init_Datatypes.dk  Coq_Init_Nat.dk
(+87 files in other folders)
