synopsis: "Extraction from XML to Coq"
description:
"""
Extraction to Dedukti
"""
opam-version: "0.1"
maintainer: "francois.thire@lsv.fr"
bug-reports: "https://github.com/francoisthire/universo/issues"
homepage: "https://github.com/francoisthire/universo"
dev-repo: "git+https://github.com/francoisthire/universo.git"
authors: [ "François Thiré <francois.thire@lsv.fr>" ]
license: "CeCILL"

depends: [
  "ocaml"        {         >= "4.04.0" }
  "dedukti"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
